# trajectory-prediction

./: .gitignore  README.md  setup.py
config/: multi_path.yaml
config/trajectory_prediction/: transformer.yaml
data/: .gitignore
data/kitti/: kitti_00.csv  kitti_00_hmi.csv  kitti_02.csv  kitti_02_hmi.csv  kitti_05.csv  kitti_05_hmi.csv  kitti_07.csv  kitti_07_hmi.csv  kitti_08.csv  kitti_08_hmi.csv  kitti_09.csv  kitti_09_hmi.csv  kitti_10.csv  kitti_10_hmi.csv  trajset.npy
lidardet/datasets/: __init__.py  base.py  builder.py  registry.py
lidardet/datasets/augmentor/: __init__.py  augmentor_utils.py  data_augmentor.py  database_sampler.py
lidardet/datasets/processor/: data_processor.py
lidardet/datasets/trajectory/: __init__.py  covernet_dataset.py  heatmap_dataset.py  mtp_dataset.py  utils.py
lidardet/losses/: loss_utils.py
lidardet/models/: __init__.py  builder.py
lidardet/ops/lidar_bev/: bev.cpp  (+1 more)
lidardet/utils/: box_utils.py  config.py  laserscan.py  laserscanvis.py  loader.py  projection.py  range_image.py  satellite_map.py  scan_unfolding.py
nnlib/datasets/: __init__.py  base.py  builder.py  registry.py
nnlib/models/: builder.py  registry.py
nnlib/utils/: config.py  loader.py  satellite_map.py
ros/: .gitignore  README.md
ros/src/traj_pred/: CMakeLists.txt  package.xml  setup.py
ros/src/traj_pred/config/: multi_path.yaml  traj_pred_node.yaml
ros/src/traj_pred/launch/: traj_pred.launch
ros/src/traj_pred/src/: traj_pred_node.py
tools/: test.py  train.py
tools/eval_utils/: trajectory_prediction.py
tools/scripts/: dist_train.sh
(+21 files in other folders)
